@@ -5,6 +5,7 @@ ChangeLog - 2006-11-17
 
 
 Version 0.2.2 (under dev!):
+   * added space between chat and nicklist when position is "right" (bug #17852)
    * added option "look_nicklist_separator" (task #5437)
    * fixed bug with DCC SEND when filename begins with '~'
    * added "irc_send_unknown_commands" option to send unknown commands to
